<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_new_item">Add New Item</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_product_detail_activty">ProductDetailActivty</string>
    <string name="search_hint">product name</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="content_description_for_empty_state">the list is empty</string>
    <string name="empty_state_text1">Click the add button to add a product</string>
    <string name="empty_state_text2">No Item Found</string>
    <string name="content_description_add_fab_btn">add button to add an item</string>
    <string name="content_description_edit_fab_btn">button to edit this product details</string>
    <string name="add_image">add image</string>
    <string name="product_detail">Product Detail</string>
    <string name="content_description_product_image">product image</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="hint_brand">Brand</string>
    <string name="price_of_each_product">Price of each product</string>
    <string name="hint_amount">amount</string>
    <string name="quantity">Quantity</string>
    <string name="hint_quantity">quantity</string>
    <string name="default_quantity_text">0</string>
    <string name="minus_btn">-</string>
    <string name="plus_btn">+</string>
    <string name="contact_info">Contact Info</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="hint_e_mail">E-Mail</string>
    <string name="add_product_btn_text">Add Product</string>
    <string name="content_desription_add_product_btn">add this product to the database</string>
    <string name="cost_of_each_product_tv">Cost of each product :</string>
    <string name="quantity_available_tv">Quantity Available :</string>
    <string name="order_more_btn_txt">order more</string>
    <string name="content_description_ordermore_btn">order more of this same product</string>
    <string name="cost_txt">Cost:</string>
    <string name="quantity_txt">quantity:</string>
    <string name="sell_btn_txt">Sell</string>
    <string name="content_description_sell_button">sell button</string>
    <string name="contact_using_text_dialog_box">Contact Using</string>
    <string name="no_number_found_tost_text">no mobile number found</string>
    <string name="error_msg_no_app_to_handle_call">no app found to make a call</string>
    <string name="error_msg_no_email_app">No email App was installed on this device</string>
    <string name="error_msg_no_emil_id_found">no email id found</string>
    <string name="submit_changes_btn">Submit Changes</string>
    <string name="change_image_btn_txt">Change Image</string>
    <string name="alert_dialog_during_delete">Are you sure you want to delete this item?</string>
    <string name="delete_text">Delete</string>
    <string name="cancel_text">Cancel</string>
    <string name="dialog_msg_when_back_btn_pressed">Discard your changes and quit editing?</string>
    <string name="keep_editing_txt">Keep Editing</string>
    <string name="discard_txt">Discard</string>
    <string name="no_product_to_sell_error_msg">No Product available please order more</string>
    <string name="update_success_msg">updated successfully</string>
    <string name="search_menu_text">Search</string>
    <string name="delete_all_menu_txt">Delete All</string>
    <string name="edit_menu_text">edit</string>
    <string name="content_description_add_image_btn">add an image button</string>
    <string name="delete_menu_txt">Delete</string>
    <string name="inserted_txt">inserted</string>
    <string name="no_insertion_txt">nothing was inserted</string>
    <string name="delete_conformation">Are you sure you want to delete all items?</string>
    <string name="delete_txt">Delete</string>
    <string name="cancel_txt">Cancel</string>
    <string name="warning_add_name">This stock must need a name Please add the Product Name</string>
    <string name="warning_add_price">This stock must need a valid price Please add the Product Price</string>
    <string name="warning_add_quantity">This stock must need valuable quantity Please add the Product quantity</string>
    <string name="warning_add_mobile_or_email">This stock must need either mobile number or email. please add either mobile number or email</string>
</resources>
