<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dharmaraj.inventorymanager.ui.ProductDetailActivity"
    tools:showIn="@layout/activity_product_detail_activty">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/product_image_view_size"
            android:contentDescription="@string/content_description_product_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/product_image_view_size" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/product_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/primary_content_start_margin"
            android:layout_marginTop="@dimen/primary_content_top_margin"
            android:textColor="@color/secondaryTextColor"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:text="Product Name" />

        <TextView
            android:id="@+id/brand_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/primary_content_top_margin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/product_name_tv"
            app:layout_constraintTop_toBottomOf="@+id/product_name_tv"
            tools:text="brand" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/default_top_margin"
            android:text="@string/cost_of_each_product_tv"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brand_name_tv" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:text="@string/quantity_available_tv"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/cost_of_each_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_view_default_margin"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            tools:text="50$" />

        <TextView
            android:id="@+id/quantity_available_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_view_default_margin"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            tools:text="50" />

        <Button
            android:id="@+id/order_more_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="@dimen/btn_margin"
            android:layout_marginTop="@dimen/btn_margin"
            android:contentDescription="@string/content_description_ordermore_btn"
            android:text="@string/order_more_btn_txt"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/sell_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/sell_btn_txt"
            app:layout_constraintBaseline_toBaselineOf="@+id/order_more_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>